--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
     "type": "library",
     "require": {
     	"php": ">=8.2",
-        "symfony/console": "7.2",
-        "symfony/process": "7.2"
+        "symfony/console": "^7.2",
+        "symfony/process": "^7.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.1",
